[gd_scene load_steps=8 format=3 uid="uid://b716eujow1e3b"]

[ext_resource type="Script" uid="uid://bbmrajn5m5u7m" path="res://Scripts/Warsaw.gd" id="1_iqfbn"]
[ext_resource type="Texture2D" uid="uid://c0kjrndfohhqs" path="res://Pics/warsaw.jpg" id="2_iqfbn"]
[ext_resource type="FontFile" uid="uid://dkfevxi8x6mai" path="res://Fonts/VT323-Regular.ttf" id="3_2m2n2"]
[ext_resource type="AudioStream" uid="uid://dn3b7qpwhgn4r" path="res://Sounds/e11.mp3" id="4_7t0sx"]
[ext_resource type="Script" uid="uid://cbx3n6ki7m0kp" path="res://Scripts/SuspicionBar.gd" id="5_qgiqo"]
[ext_resource type="Script" uid="uid://pw20y301sph6" path="res://Scripts/PlayerStateMachine.gd" id="6_r50kf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n3j5n"]
modulate_color = Color(1, 0.029999971, 0.029999971, 1)

[node name="Warsaw" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_iqfbn")

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 1148.0
offset_bottom = 646.0
texture = ExtResource("2_iqfbn")
expand_mode = 1

[node name="Private_key_label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 173.0
offset_top = 212.0
offset_right = 1021.0
offset_bottom = 286.0
theme_override_fonts/font = ExtResource("3_2m2n2")
theme_override_font_sizes/font_size = 73
text = "Your Private Key is 14, 15, 21, 7"

[node name="SubmitButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 297.0
offset_top = 523.0
offset_right = 837.0
offset_bottom = 598.0
theme_override_font_sizes/font_size = 40
text = "Submit Answer"

[node name="InputField" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 190.0
offset_top = 365.0
offset_right = 1023.0
offset_bottom = 483.0
theme_override_colors/font_color = Color(0.18781084, 0.52846825, 0.5217966, 1)
theme_override_colors/font_uneditable_color = Color(0.8230708, 0.94474113, 0.070010625, 0.5019608)
theme_override_colors/font_selected_color = Color(0.01999998, 0.16700006, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0.07916659, 0.95, 1)
theme_override_colors/font_placeholder_color = Color(0.11821342, 0.88, 0.017599983, 0.6)
theme_override_colors/caret_color = Color(0, 0.95, 0.52250016, 1)
theme_override_colors/selection_color = Color(0.3615431, 0.222594, 0.06646733, 1)
theme_override_fonts/font = ExtResource("3_2m2n2")
theme_override_font_sizes/font_size = 89
theme_override_styles/normal = SubResource("StyleBoxTexture_n3j5n")
placeholder_text = "Enter decoded message..."

[node name="BroadcastPlayer" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("4_7t0sx")

[node name="SuspicionBar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = 21.0
offset_top = 11.0
offset_right = 340.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0.95, 0.01899998, 0.01899998, 1)
theme_override_colors/font_outline_color = Color(1, 0.96857667, 0, 1)
script = ExtResource("5_qgiqo")

[node name="PlayerStateMachine" type="Node2D" parent="Control"]
script = ExtResource("6_r50kf")
